# BLOGAPPLICATION

./: db.sqlite3  pyproject.toml
BlogProject/: settings.py  urls.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
templates/: base.html  index.html  login.html  post_detail.html  profile.html  register.html  sidebar.html
templates/blog/: admin.py  base.html  forms.py  models.py  urls.py  views.py
